@@ -1,3 +1,8 @@
+2011-05-18  Richard Guenther  <rguenther@suse.de>
+
+	* gimple.c (gimple_register_type_1): New function, split out from ...
+	(gimple_register_type): ... here.  Avoid infinite recursion.
+
 2011-05-18  Ira Rosen  <ira.rosen@linaro.org>
 
 	PR tree-optimization/41881
